@@ -5,12 +5,13 @@ import java.util.HashMap;
 
 public class StudentParser {
 
-    private HashMap<AssignmentType, ArrayList<Assignment>> assignmentMap = new HashMap<>();
-    private ArrayList<Assignment> assignments = new ArrayList<>(); // Store assignments here
+    private final HashMap<AssignmentType, ArrayList<Assignment>> _assignmentMap = new HashMap<>();
+    private final ArrayList<Assignment> _assignments = new ArrayList<>(); // Store assignments here
 
     public StudentParser() {
+        // Create a mapping of AssignmentTypes to hold the assignments when they're parsed:
         for (AssignmentType type : AssignmentType.values()) {
-            assignmentMap.put(type, new ArrayList<>()); // Initialize each assignment type
+            _assignmentMap.put(type, new ArrayList<>()); // Initialize each assignment type
         }
     }
 
@@ -19,18 +20,14 @@ public class StudentParser {
         int _ID = 0;
 
         // Parse header row (assignment names only)
-        String[] headerRow = csvData.get(0); // The first row is the header
-        for (int i = 2; i < headerRow.length - 1; i += 2) {
-            String assignmentName = headerRow[i]; // Only store the assignment name
-            assignments.add(new Assignment(assignmentName, 100, "2024-09-30", null)); // We’ll set type later
-        }
+        parseHeaderRow(csvData.getFirst());
 
         // Parse student data (remaining rows)
         for (int rowIndex = 1; rowIndex < csvData.size(); rowIndex++) {
             String[] row = csvData.get(rowIndex);
-            String name = row[0];
-            StudentType studentType = StudentType.valueOf(row[1].toUpperCase());
-            Student student = creatStudent(studentType, name, ++_ID, row);
+            var name = row[0];
+            var studentType = StudentType.valueOf(row[1].toUpperCase());
+            var student = creatStudent(studentType, name, ++_ID, row); //pre-increment ID so it's not Zero
 
             getAssignments(row, student);
 
@@ -40,12 +37,22 @@ public class StudentParser {
         return students;
     }
 
+    private void parseHeaderRow(String[] headerRow) {
+        // The first row is the header
+        for (int i = 2; i < headerRow.length - 1; i += 2) {
+            String assignmentName = headerRow[i]; // Only store the assignment name
+            _assignments.add(new Assignment(assignmentName, 100, "2024-09-30", null)); // We’ll set type later
+        }
+    }
+
     private Student creatStudent(StudentType studentType, String name, int _ID, String[] row) {
         if (studentType == StudentType.PARTTIME) {
             int hoursWorked = Integer.parseInt(row[row.length - 1]); // Last column is hours worked
             return new PartTimeStudent(name, "ID_" + _ID, hoursWorked);
         } else if (studentType == StudentType.ONLINE) {
-            return new OnlineStudent(name, "ID_" + _ID);
+            var student = new OnlineStudent(name, "ID_" + _ID);
+            simulateOnlineStudentData(student);
+            return student;
         } else {
             return new Student(name, "ID_" + _ID, StudentType.FULLTIME);
         }
@@ -56,14 +63,21 @@ public class StudentParser {
         for (int i = 2; i < row.length - 1; i += 2) {
             int grade = Integer.parseInt(row[i]);
             AssignmentType type = AssignmentType.valueOf(row[i + 1].toUpperCase()); // Now parse assignment type from data row
-            Assignment assignment = assignments.get((i - 2) / 2); // Get corresponding assignment
+            Assignment assignment = _assignments.get((i - 2) / 2); // Get corresponding assignment
             assignment.setType(type); // Set the type in the assignment
             student.addGrade(assignment, grade); // Assign grade to the student
-            assignmentMap.get(type).add(assignment); // Add assignment to assignmentMap
+            _assignmentMap.get(type).add(assignment); // Add assignment to assignmentMap
         }
     }
 
-    public HashMap<AssignmentType, ArrayList<Assignment>> getAssignmentMap() {
-        return assignmentMap;
+    private void simulateOnlineStudentData(OnlineStudent student) {
+        var min = 1;
+        var range = 15;
+        var posts = (int)(Math.random() * range) + min;
+        for (int i =0; i < posts; i++) {
+            student.incrementForumPosts();
+            student.completeVideoLecture();
+        }
     }
+
 }
